--- a/src/app/components/header/components/header/header.component.html
+++ b/src/app/components/header/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
   <div class="container">
-    <h1>{{ title }}</h1>
+    <h1 class="logo">{{ title }}</h1>
   </div>
 </header>
