--- a/src/app/components/region/region/region.component.css
+++ b/src/app/components/region/region/region.component.css
@@ -1,10 +1,13 @@
 .region-table-container {
-  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   overflow-x: auto;
 }
 
 .region-table {
-  width: 100%;
+  width: 60%;
   border-collapse: collapse;
   font-family: Arial, sans-serif;
   font-size: 14px;
