--- a/src/app/components/walk/walk/walk.component.html
+++ b/src/app/components/walk/walk/walk.component.html
@@ -5,7 +5,7 @@
         <th>Walk Name</th>
         <th>Description</th>
         <th>Difficulty</th>
-        <th>Walk Length (km)</th>
+        <th>Walk (km)</th>
         <th>Region</th>
         <th>Add Walk</th>
         <th>Update</th>
