cards for recent walks

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,8 @@
   </div>
 
   <div class="home-right">
-    <button routerLink="/walks" class="home-button">Recent Walks</button>
-    <button routerLink="/regions" class="home-button">Regions</button>
+    <button routerLink="/recentWalk" class="home-button">Recent Walks</button>
     <button routerLink="/walks" class="home-button">Walks</button>
+    <button routerLink="/regions" class="home-button">Regions</button>
   </div>
 </div>
