--- a/src/app/components/region/region/region.component.html
+++ b/src/app/components/region/region/region.component.html
@@ -1,4 +1,6 @@
-<div class="region-table-container">
+<app-loader [isLoading]="loading"></app-loader>
+
+<div *ngIf="!loading" class="region-table-container">
   <table class="region-table">
     <thead>
       <tr>
