--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,5 +1,11 @@
 <div *ngIf="isLoading" class="loader-overlay">
-  <div class="spinner"></div>
+  <div class="wave-container">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div>
   <p class="loading-text">
     Deployed the API on Azure with a free Student Azure Subscription. <br />
     Therefore the API may take a bit longer to load. <br />
